MMA-9932 list all topic configs (#810)
* MMA-9932 add all topics configs resource
